[project]
name = "pkbmod"
version = "0.1.0"
description = "Predictive Clustering Kernel-Based Moving Object Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "torch>=2.10.0",
]

[dependencies-groups]
dev = [
    "pytest>=8.3.3",
]
